adcionei um parágrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum a enim esse doloremque officia dolores, ducimus veniam vero maxime reprehenderit, hic, libero laborum? Error repellendus aperiam at, unde placeat perspiciatis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos numquam expedita ipsa quas recusandae et beatae, dolorum voluptates ipsum odit fugit dolore quam, sunt libero est accusantium? Nobis, illum.</p>
 </body>
 </html>
